# tars2node

./: .travis.yml  CMakeLists.txt  README.md  README.zh.md
include/: code_generator.h
src/: code_generator.cpp  code_generator.h  file_util.cpp  gen_js.cpp  gen_js_dts.cpp  gen_proxy.cpp  gen_proxy_dts.cpp  gen_proxy_ts.cpp  gen_server.cpp  gen_server_dts.cpp  gen_server_ts.cpp  gen_server_ts_imp.cpp  gen_ts.cpp  idl_scan.cpp  idl_util.cpp  main.cpp
third_partly/tarsgrammar/: tars.lex.cpp  tars.tab.cpp
third_partly/util/include/util/: tc_encoder.h
third_partly/util/src/: tc_encoder.cpp  tc_ex.cpp
